# research

./: .gitignore  .mise.toml  CLAUDE.md  LICENSE  README.md  lefthook.yml  pyproject.toml
.claude/agents/: agent-manager.md  agent-reviewer.md  command-creator.md  command-manager.md  command-quality-reviewer.md  command-reviewer.md  commander.md  implementation-plan-reviewer.md  implementation-planner.md  session-handover.md  session-manager.md  subagent-creator.md  subagent-manager.md  subagent-quality-reviewer.md  subagent-reviewer.md  worktree-creator.md  worktree-manager.md  worktree-reviewer.md
.claude/commands/: clean-gone.md  command.md  handover.md  plan.md  review-agent.md  review-command.md  subagent.md  wt.md
.claude/commands/git/: clean-gone.md
.claude/commands/manager/: agent.md
.claude/commands/review/: agent.md  worktree.md
.claude/commands/session/: handover.md
.claude/skills/macos-ocr-finder/ocr_finder/: __init__.py  actions.py  cli.py  core.py  models.py
.claude/skills/macos-screen-recorder/: SKILL.md
.claude/skills/macos-screen-recorder/screen_recorder/: __init__.py  actions.py  cli.py  core.py  models.py
.claude/skills/macos-space-finder/: SKILL.md  pyproject.toml
.claude/skills/macos-space-finder/scripts/: __init__.py  __main__.py  actions.py  cli.py  find_space.py  models.py
.claude/skills/macos-space-finder/space_finder/: __init__.py  actions.py  cli.py  models.py
.claude/skills/macos-space-finder/tests/: __init__.py  test_find_space.py  test_space_finder.py
.claude/skills/macos-ui-inspector/: SKILL.md  pyproject.toml
.claude/skills/macos-ui-inspector/ui_inspector/: __init__.py  __main__.py  actions.py  cli.py  core.py  models.py
.claude/skills/macos-verified-screenshot/: SKILL.md  pyproject.toml
.claude/skills/macos-verified-screenshot/scripts/: __init__.py  actions.py  core.py
.claude/skills/macos-verified-screenshot/tests/: __init__.py  test_verified_screenshot.py
.claude/skills/macos-verified-screenshot/verified_screenshot/: __init__.py  __main__.py  cli.py
.claude/skills/macos-window-controller/: SKILL.md  pyproject.toml
.claude/skills/macos-window-controller/scripts/: __init__.py  actions.py  cli.py  core.py  models.py  window_controller.py
.claude/skills/macos-window-controller/tests/: __init__.py  test_window_controller.py
.claude/skills/macos-window-controller/window_controller/: __init__.py  actions.py  cli.py
ai/: claude-code-commands-guide.md  claude-code-extensibility-guide.md  claude-code-settings-merge.md  claude-code-subagents-guide.md  claude-code-thinking-modes.md  claude-code-wrong-shell.md  command-template.md  prompt-engineering-spec.md  skills-development-spec.md  subagent-template.md  troubleshooting-doc-spec.md
ai/prompts/: README.md  _template.md  executor-agent.md  planning-agent.md  prompt-author-agent.md  session-handover.md  worktree-creator.md
claude-code/agents/: command-manager.md  command-reviewer.md  implementation-plan-reviewer.md  session-manager.md  worktree-manager-light.md  worktree-manager.md  worktree-reviewer.md
claude-code/commands/git/: clean-gone.md  reset-main.md  worktree.md
claude-code/commands/manager/: plan.md
claude-code/commands/review/: command.md  plan.md
claude-code/commands/session/: handover.md
claude-code/skills/_bin/: claude-code-skills
claude-code/skills/_shared/: __init__.py  artifacts.py
claude-code/skills/browser-controller/: SKILL.md  pyproject.toml
claude-code/skills/browser-controller/browser_controller/: __init__.py  __main__.py  actions.py  cli.py  core.py  models.py
claude-code/skills/browser-controller/browser_controller/backends/: __init__.py  cdp.py  marionette.py
claude-code/skills/browser-controller/browser_controller/utils/: __init__.py
claude-code/skills/macos-ocr-finder/: SKILL.md  pyproject.toml
claude-code/skills/macos-ocr-finder/ocr_finder/: __main__.py  cli.py
claude-code/skills/macos-screen-recorder/: SKILL.md  pyproject.toml
claude-code/skills/macos-screen-recorder/screen_recorder/: __init__.py  actions.py  cli.py  models.py  screencapturekit.py
claude-code/skills/macos-space-finder/: SKILL.md
claude-code/skills/macos-ui-inspector/: SKILL.md
claude-code/skills/macos-verified-screenshot/: SKILL.md  pyproject.toml
claude-code/skills/macos-window-controller/: SKILL.md
claude-code/skills/ocr-finder/: SKILL.md  pyproject.toml
claude-code/skills/screen-recorder/: SKILL.md  pyproject.toml
claude-code/skills/space-finder/: SKILL.md  pyproject.toml
claude-code/skills/ui-inspector/: SKILL.md  pyproject.toml
claude-code/skills/verified-screenshot/: SKILL.md  pyproject.toml
claude-code/skills/verified-screenshot/verified_screenshot/: __init__.py  actions.py  cli.py
claude-code/skills/web-automation-investigation/: SKILL.md  code-patterns.md  common-pitfalls.md  debugging-techniques.md  element-selectors.md  investigation-workflow.md  practical-debugging-workflow.md  pyproject.toml  tool-comparison.md
claude-code/skills/window-controller/: SKILL.md  pyproject.toml
claude-code/skills/window-controller/window_controller/: actions.py  cli.py
spec/: spec_helper.sh
spec/commands/git/: clean_gone_spec.sh  reset_main_spec.sh  worktree_spec.sh
spec/support/: cleanup_tracker.sh  git_test_env.sh  script_coverage.sh  script_extractor.sh
tests/: test_find_space.py  test_window_controller.py
tests/fixtures/: sample.mov  short.mov  static.mov
tests/skills/: __init__.py  conftest.py  test_browser_controller.py  test_ocr_finder.py  test_screen_recorder.py  test_screen_recorder_actions.py  test_screen_recorder_conversion.py  test_screen_recorder_core.py  test_screen_recorder_integration.py  test_screen_recorder_properties.py  test_screen_recorder_sck_video.py  test_screen_recorder_verification.py  test_screencapturekit.py  test_space_finder.py  test_ui_inspector.py  test_verified_screenshot.py  test_window_controller.py
tests/skills/integration/: README.md  __init__.py  test_combined_workflow.py  test_ocr_finder_integration.py  test_ui_inspector_integration.py
(+24 files in other folders)
