[project]
name = "smykla-labs-research"
version = "0.1.0"
description = "Knowledge base and research artifacts for investigations, experiments, and learnings"
requires-python = ">=3.11"
dependencies = [
    # macOS window/screenshot skills
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "psutil>=5.9",
    "pillow>=10.0",
    "imagehash>=4.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
# Script-only workspace, no package to build
package = false

[tool.uv.workspace]
members = [".claude/skills/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "S603",   # subprocess-without-shell-equals-true (we need subprocess)
    "S607",   # start-process-with-partial-path (plutil/osascript are system tools)
]

[tool.ruff.lint.pylint]
max-returns = 7  # CLI main functions with multiple subcommands need more returns

[tool.ruff.lint.per-file-ignores]
# Allow print statements in skill packages (CLI output)
"**/space_finder/*.py" = ["T201"]
"**/verified_screenshot/*.py" = ["T201"]
"**/window_controller/*.py" = ["T201"]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "ARG002",  # Allow unused method arguments (fixtures)
    "RUF001",  # Allow ambiguous characters in test strings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["plistlib", "Quartz", "psutil", "PIL", "imagehash"]
ignore_missing_imports = true
