[project]
name = "macos-verified-screenshot"
version = "0.1.0"
description = "Capture macOS screenshots with verification and retry logic"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-framework-Quartz>=10.0",
    "psutil>=5.9",
    "pillow>=10.0",
    "imagehash>=4.3",
]

[tool.uv]
# Script-only project, no package to build
package = false