[project]
name = "verified-screenshot"
version = "1.0.0"
description = "Capture macOS screenshots with verification and retry logic"
requires-python = ">=3.11"
dependencies = []  # Managed by workspace root

[project.scripts]
verified-screenshot = "verified_screenshot.cli:main"

[tool.uv]
package = true
