[project]
name = "window-controller"
version = "1.0.0"
description = "macOS window detection, activation, and screenshot capture across Spaces"
requires-python = ">=3.11"
dependencies = []  # Managed by workspace root

[project.scripts]
window-controller = "window_controller.cli:main"

[tool.uv]
package = true
